RESOLVED FIXED193716
[PSON] Flash on back navigation on Mac
https://bugs.webkit.org/show_bug.cgi?id=193716
Summary [PSON] Flash on back navigation on Mac
Antti Koivisto
Reported 2019-01-23 06:51:50 PST
1. Go to news.ycombinator.com 2. Navigate to some external site 3. Hit back
Attachments
patch (5.53 KB, patch)
2019-01-23 07:48 PST, Antti Koivisto
cdumez: review+
patch (5.55 KB, patch)
2019-01-23 09:21 PST, Antti Koivisto
no flags
patch (9.39 KB, patch)
2019-01-24 02:11 PST, Antti Koivisto
cdumez: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews202 for win-future (12.86 MB, application/zip)
2019-01-24 03:58 PST, EWS Watchlist
no flags
patch (9.31 KB, patch)
2019-01-24 09:55 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-01-23 06:52:20 PST
Antti Koivisto
Comment 2 2019-01-23 07:48:47 PST
Chris Dumez
Comment 3 2019-01-23 08:25:19 PST
Comment on attachment 359883 [details] patch r=me
Antti Koivisto
Comment 4 2019-01-23 09:21:22 PST
WebKit Commit Bot
Comment 5 2019-01-23 09:43:08 PST
Comment on attachment 359894 [details] patch Clearing flags on attachment: 359894 Committed r240343: <https://trac.webkit.org/changeset/240343>
WebKit Commit Bot
Comment 6 2019-01-23 09:43:09 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 7 2019-01-23 15:03:57 PST
It looks like the changes in https://trac.webkit.org/changeset/240343/webkit has caused 4 API failures on Mac and 2 on iOS. Build: https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20%28Tests%29/builds/10631 API failures: https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20%28Tests%29/builds/10631/steps/run-api-tests/logs/stdio I was able to reproduce these using command: run-api-tests --root debug-240343 I reproduced all 4 API failures on Mac. running this on r240342 yields no API failures.
Ryan Haddad
Comment 8 2019-01-23 16:24:01 PST
Reverted r240343 for reason: Caused 4 PSON API test failures. Committed r240365: <https://trac.webkit.org/changeset/240365>
Chris Dumez
Comment 9 2019-01-23 16:30:53 PST
Comment on attachment 359894 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=359894&action=review > Source/WebKit/ChangeLog:10 > + I think the reason that the API tests are failing is because the logic in this patch is slightly wrong. Note that before your patch, we would keep the SuspendedPageProxy alive, even if the page did not enter page cache. If it did not enter page cache, we would merely close the WebPage on WebContent process side but the SuspendedPageProxy would stay on UIProcess side to keep the process alive so that we can reuse the process.
Antti Koivisto
Comment 10 2019-01-23 21:50:20 PST
> I think the reason that the API tests are failing is because the logic in > this patch is slightly wrong. Note that before your patch, we would keep the > SuspendedPageProxy alive, even if the page did not enter page cache. If it > did not enter page cache, we would merely close the WebPage on WebContent > process side but the SuspendedPageProxy would stay on UIProcess side to keep > the process alive so that we can reuse the process. So we need to hang to proxies of closed pages just to keep the process alive? It is weird that we are relying on such side effects.
Chris Dumez
Comment 11 2019-01-23 21:54:22 PST
(In reply to Antti Koivisto from comment #10) > > I think the reason that the API tests are failing is because the logic in > > this patch is slightly wrong. Note that before your patch, we would keep the > > SuspendedPageProxy alive, even if the page did not enter page cache. If it > > did not enter page cache, we would merely close the WebPage on WebContent > > process side but the SuspendedPageProxy would stay on UIProcess side to keep > > the process alive so that we can reuse the process. > > So we need to hang to proxies of closed pages just to keep the process > alive? It is weird that we are relying on such side effects. It was convenient but I agree it can be confusing. Maybe we should refactor at some point.
Antti Koivisto
Comment 12 2019-01-24 02:11:31 PST
EWS Watchlist
Comment 13 2019-01-24 03:58:20 PST
Comment on attachment 360002 [details] patch Attachment 360002 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/10871629 New failing tests: js/dom/custom-constructors.html
EWS Watchlist
Comment 14 2019-01-24 03:58:31 PST
Created attachment 360003 [details] Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
Chris Dumez
Comment 15 2019-01-24 08:45:51 PST
Comment on attachment 360002 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=360002&action=review r=me with suggestions. > Source/WebKit/UIProcess/SuspendedPageProxy.cpp:173 > + shouldKeepOnFailure = m_page.drawingArea() && m_page.drawingArea()->type() == DrawingAreaTypeTiledCoreAnimation; How about shouldDelayClosingOnFailure ? > Tools/ChangeLog:12 > + not sufficient to gurantee we have received all the messages. Wait for them. typo: gurantee. > Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2344 > + TestWebKitAPI::Util::run(&receivedMessage); I think we could simply use TestWebKitAPI::Util::sleep() in the loop here. > Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2439 > + TestWebKitAPI::Util::run(&receivedMessage); ditto.
Antti Koivisto
Comment 16 2019-01-24 09:55:43 PST
Chris Dumez
Comment 17 2019-01-24 09:56:38 PST
*** Bug 193770 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 18 2019-01-24 10:35:11 PST
Comment on attachment 360019 [details] patch Clearing flags on attachment: 360019 Committed r240443: <https://trac.webkit.org/changeset/240443>
WebKit Commit Bot
Comment 19 2019-01-24 10:35:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.